Name:          journey
Version:       0.1
Synopsis:      Itineraries by air transportation
Description:
  A library for computation of itineraries from IATA SSIM 7 data files.

Author:        Emmanuel Bastien
Maintainer:    os@ebastien.name
Stability:     Experimental
Cabal-Version: >=1.14.0
Build-Type:    Simple
Tested-With:   GHC ==7.4.1

Library
  Hs-source-dirs:   src
  Default-Language: Haskell2010
  GHC-Options:      -O2
  Build-Depends:
    base, time, bytestring, bytestring-lexing, attoparsec,
    vector, text, text-format, containers, IntervalMap
  Exposed-Modules:
    Journey.Ssim,
    Journey.Parsers,
    Journey.Route,
    Journey.GeoCoord,
    Journey.Connection,
    Journey.Builder
    Journey.EnumMap,
    Journey.Types,
    Journey.MCT.DecisionTree,
    Journey.MCT.Rule,
    Journey.MCT.Tree,
    Journey.MCT.Attributes,
    Journey.MCT.OAGParser

Executable itineraries
  Hs-source-dirs:   src
  Main-is:          Main.hs
  Default-Language: Haskell2010
  GHC-Options: -O2
  Build-Depends:
    base, time, bytestring, bytestring-lexing, attoparsec,
    vector, text, text-format, containers, IntervalMap
  Other-Modules:
    Journey.Ssim,
    Journey.Parsers,
    Journey.Route,
    Journey.GeoCoord,
    Journey.Connection,
    Journey.Builder
    Journey.EnumMap,
    Journey.Types,
    Journey.MCT.DecisionTree,
    Journey.MCT.Rule,
    Journey.MCT.Tree,
    Journey.MCT.Attributes,
    Journey.MCT.OAGParser

Executable mctquery
  Hs-source-dirs:   src
  Main-is:          MCTQuery.hs
  Default-Language: Haskell2010
  GHC-Options: -O2 -fprof-auto -rtsopts
  Build-Depends:
    base, time, bytestring, bytestring-lexing, attoparsec,
    vector, text, text-format, containers, IntervalMap
  Other-Modules:
    Journey.Parsers,
    Journey.EnumMap,
    Journey.Types,
    Journey.MCT.DecisionTree,
    Journey.MCT.Rule,
    Journey.MCT.Tree,
    Journey.MCT.Attributes,
    Journey.MCT.OAGParser

Test-Suite tests
  Hs-source-dirs:   src, testsuite/tests
  Type:             exitcode-stdio-1.0
  Main-is:          Tests.hs
  Default-Language: Haskell2010
  GHC-Options: -O2 -fprof-auto -rtsopts
  Build-Depends:
    base, time, bytestring, bytestring-lexing, attoparsec,
    vector, text, text-format, containers, IntervalMap,
    test-framework, QuickCheck, test-framework-quickcheck2,
    criterion
