Name:          journey
Version:       0.1
Synopsis:      Itineraries by air transportation
Description:
  A library for computation of itineraries from IATA SSIM 7 data files.

Author:        Emmanuel Bastien
Maintainer:    os@ebastien.name
Stability:     Experimental
Cabal-Version: >=1.14.0
Build-Type:    Simple
Tested-With:   GHC ==7.4.1

Library
  Hs-source-dirs:   src
  Default-Language: Haskell2010
  GHC-Options:      -O3
  Build-Depends:
    base, time, bytestring, bytestring-lexing, attoparsec,
    vector, text, text-format, containers, IntervalMap, parallel
  Exposed-Modules:

Executable itineraries
  Hs-source-dirs:   src
  Main-is:          Itineraries.hs
  Default-Language: Haskell2010
  GHC-Options:      -O3 -rtsopts -threaded -eventlog
  GHC-Prof-Options: -fprof-auto
  Build-Depends:
    base, time, bytestring, bytestring-lexing, attoparsec,
    vector, text, text-format, containers, IntervalMap, parallel
  Other-Modules:
    Journey.EnumMap,
    Journey.Types,
    Journey.Restriction,
    Journey.Flight,
    Journey.LegPeriod,
    Journey.Period,
    Journey.SegmentDate,
    Journey.SegmentPeriod,
    Journey.Ssim,
    Journey.Ssim.Internal,
    Journey.Parsers,
    Journey.Route,
    Journey.GeoCoord,
    Journey.Connection,
    Journey.Builder
    Journey.MCT.DecisionTree,
    Journey.MCT.Rule,
    Journey.MCT.Tree,
    Journey.MCT.Attributes,
    Journey.MCT.OAGParser

Executable mctquery
  Hs-source-dirs:   src
  Main-is:          MCTQuery.hs
  Default-Language: Haskell2010
  GHC-Options:      -O3 -rtsopts
  GHC-Prof-Options: -fprof-auto
  Build-Depends:
    base, time, bytestring, bytestring-lexing, attoparsec,
    vector, text, text-format, containers, IntervalMap
  Other-Modules:
    Journey.Parsers,
    Journey.EnumMap,
    Journey.Types,
    Journey.MCT.DecisionTree,
    Journey.MCT.Rule,
    Journey.MCT.Tree,
    Journey.MCT.Attributes,
    Journey.MCT.OAGParser

Test-Suite tests
  Hs-source-dirs:   src, testsuite/src
  Type:             exitcode-stdio-1.0
  Main-is:          Tests.hs
  Default-Language: Haskell2010
  GHC-Options:      -O3 -rtsopts
  GHC-Prof-Options: -fprof-auto
  Build-Depends:
    base, time, bytestring, bytestring-lexing, attoparsec,
    vector, text, text-format, containers, IntervalMap, parallel,
    test-framework, QuickCheck, test-framework-quickcheck2,
    test-framework-hunit, HUnit

Test-Suite benchs
  Hs-source-dirs:   src, testsuite/src
  Type:             exitcode-stdio-1.0
  Main-is:          Benchs.hs
  Default-Language: Haskell2010
  GHC-Options:      -O3 -rtsopts -threaded -eventlog
  GHC-Prof-Options: -fprof-auto
  Build-Depends:
    base, time, bytestring, bytestring-lexing, attoparsec,
    vector, text, text-format, containers, IntervalMap, parallel,
    criterion, parallel-io
